Use correct attributes for skipCrds in GHA runner controllers

--- a/argocd/github-actions-runner-controller-chrismlee42-application.yaml
+++ b/argocd/github-actions-runner-controller-chrismlee42-application.yaml
@@ -20,7 +20,7 @@ spec:
       targetRevision: HEAD
     - chart: actions-runner-controller-charts/gha-runner-scale-set-controller
       helm:
-        installCRDs: false
+        skipCrds: true
         releaseName: github-actions-runner-controller-chrismlee42
         valuesObject:
           githubConfigSecret: github-config
