Add data ignores for account/organization secrets in GHA runners app

--- a/argocd/github-actions-runner-application.yaml
+++ b/argocd/github-actions-runner-application.yaml
@@ -494,3 +494,21 @@ spec:
       namespace: github-actions-runner
       jsonPointers:
         - /data
+    - # group: core
+      kind: Secret
+      name: github-config-chrismlee42
+      namespace: github-actions-runner
+      jsonPointers:
+        - /data
+    - # group: core
+      kind: Secret
+      name: github-config-morphacy
+      namespace: github-actions-runner
+      jsonPointers:
+        - /data
+    - # group: core
+      kind: Secret
+      name: github-config-mutinysoftware
+      namespace: github-actions-runner
+      jsonPointers:
+        - /data
