Re-enable Morphacy GHA runner

--- a/argocd/github-actions-runner-application.yaml
+++ b/argocd/github-actions-runner-application.yaml
@@ -340,20 +340,20 @@ spec:
       ref: helm-metrics-server-config
       repoURL: ghcr.io/actions
       targetRevision: 0.13.1
-    # - chart: actions-runner-controller-charts/gha-runner-scale-set
-    #   helm:
-    #     releaseName: chris-pc-morphacy
-    #     valuesObject:
-    #       controllerServiceAccount:
-    #         namespace: github-actions-runner-controller
-    #         name: github-actions-runner-controller-gha-rs-controller
-    #       githubConfigSecret: github-config-morphacy
-    #       githubConfigUrl: https://github.com/Morphacy/
-    #       minRunners: 0
-    #       namespace: github-actions-runner
-    #   ref: helm-morphacy
-    #   repoURL: ghcr.io/actions
-    #   targetRevision: 0.13.1
+    - chart: actions-runner-controller-charts/gha-runner-scale-set
+      helm:
+        releaseName: chris-pc-morphacy
+        valuesObject:
+          controllerServiceAccount:
+            namespace: github-actions-runner-controller
+            name: github-actions-runner-controller-gha-rs-controller
+          githubConfigSecret: github-config-morphacy
+          githubConfigUrl: https://github.com/Morphacy/
+          minRunners: 0
+          namespace: github-actions-runner
+      ref: helm-morphacy
+      repoURL: ghcr.io/actions
+      targetRevision: 0.13.1
     - chart: actions-runner-controller-charts/gha-runner-scale-set
       helm:
         releaseName: chris-pc-netbox
