Revert "Update Morphacy GHA runner secret"
This reverts commit 90d2f597faacd3889121e9c92fdfeb0dac92c825.

--- a/argocd/github-actions-runner-application.yaml
+++ b/argocd/github-actions-runner-application.yaml
@@ -347,7 +347,7 @@ spec:
           controllerServiceAccount:
             namespace: github-actions-runner-controller
             name: github-actions-runner-controller-gha-rs-controller
-          githubConfigSecret: github-config-chrismlee42
+          githubConfigSecret: github-config-morphacy
           githubConfigUrl: https://github.com/Morphacy/
           minRunners: 0
           namespace: github-actions-runner
