Remove trailing slash in Morphacy GHA runner config

--- a/argocd/github-actions-runner-application.yaml
+++ b/argocd/github-actions-runner-application.yaml
@@ -348,7 +348,7 @@ spec:
             namespace: github-actions-runner-controller
             name: github-actions-runner-controller-gha-rs-controller
           githubConfigSecret: github-config-morphacy
-          githubConfigUrl: https://github.com/Morphacy/
+          githubConfigUrl: https://github.com/Morphacy
           minRunners: 0
           namespace: github-actions-runner
       ref: helm-morphacy
