Add difference ignore for openclaw google-credentials secret

--- a/argocd/openclaw-application.yaml
+++ b/argocd/openclaw-application.yaml
@@ -45,3 +45,8 @@ spec:
       namespace: openclaw
       jsonPointers:
         - /data
+    - kind: Secret
+      name: google-credentials
+      namespace: openclaw
+      jsonPointers:
+        - /data
